--- a/event/package.json
+++ b/event/package.json
@@ -12,6 +12,9 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "v-calendar": "^2.4.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
